// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-phonefield Autocomplete Work Phone 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                autocomplete="work tel"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Detect Country 1`] = `
<div>
  <div>
    <p>
      Choisir un numéro de téléphone
    </p>
     
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select"
      role="combobox"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--has-cursor-pointer m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <span
                class="m-input-style__label"
                style="z-index: -1;"
              >
                <span
                  class="m-input-style__text"
                />
              </span>
               
              <div
                class="m-input-style__input"
              >
                <div
                  class="m-input-style__prefix"
                />
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-describedby="fakeId"
                    aria-haspopup="listbox"
                    aria-labelledby="fakeId m-select-fakeId"
                    aria-required="true"
                    class="m-select__input"
                    id="m-select-fakeId"
                    role="button"
                    tabindex="0"
                  >
                    
                    +14188753893
                    
                    <!---->
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
    <br />
     
    <p>
      Le pays courant doit être 
      <strong>
        Canada
      </strong>
       et le format affiché : 
      <strong>
        +1 222 333 4444
      </strong>
      .
    </p>
    <br />
  </div>
   
  <div>
    <div
      class="m-phonefield"
      style="width: 100%; max-width: 288px;"
    >
      <div
        class="m-phonefield__wrapper"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-owns="listbox-fakeId"
          class="m-base-select m-select-virtual-scroll m-phonefield__country"
          role="combobox"
          style="width: 100%; max-width: 288px;"
          virtualscrollitemheight="52"
        >
          <div
            class="m-base-select__popup"
          >
            <div
              class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
              style="width: 100%; max-width: regular;"
            >
              <div
                class="m-input-style__main"
                style="width: 100%; margin-top: 10px;"
              >
                <div
                  class="m-input-style__body"
                >
                  <label
                    class="m-input-style__label"
                    for="m-select-fakeId"
                    id="fakeId"
                    style="margin-right: 0px;"
                  >
                    <span
                      class="m-input-style__text"
                    >
                      <span>
                        Pays
                      </span>
                       
                      <!---->
                    </span>
                  </label>
                   
                  <div
                    class="m-input-style__input"
                  >
                    <!---->
                     
                    <div
                      class="m-input-style__content"
                    >
                      <div
                        aria-activedescendant=""
                        aria-controls="listbox-fakeId"
                        aria-haspopup="listbox"
                        aria-labelleby="fakeId"
                        class="m-phonefield__country-field"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="m-phonefield__hidden"
                          id="fakeId"
                        >
                          
                        Code pays: ca
                    
                        </span>
                         
                        <svg
                          aria-hidden="true"
                          class="m-phonefield__flag-wrapper"
                          height="20px"
                          width="27px"
                        >
                          <use
                            aria-hidden="true"
                          />
                        </svg>
                      </div>
                       
                      <!---->
                       
                      <!---->
                    </div>
                     
                    <div
                      class="m-input-style__suffix"
                    >
                       
                      <!---->
                    </div>
                  </div>
                </div>
                 
                <div
                  class="m-input-style__append"
                >
                  <!---->
                   
                  <div
                    class="m-select__arrow"
                  >
                    <svg
                      aria-hidden="true"
                      aria-label="Ouvrir la liste déroulante"
                      class="m-icon m-select__arrow-icon"
                      height="12px"
                      width="12px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                </div>
              </div>
                
              <!---->
            </div>
          </div>
           
          <div
            class="m-validation-message m-select__validation-message"
            id="fakeId"
          >
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-popper m-popup"
          >
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="mPhonefield-fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Numéro de téléphone
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <input
                    aria-describedby="fakeId"
                    id="mPhonefield-fakeId"
                    type="tel"
                  />
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-phonefield__validation"
        id="fakeId"
      >
        <div
          class="m-validation-message m-phonefield__validation-message"
        >
          <!---->
           
          <p
            class="m-validation-message__helper"
          >
            Ex. :  +1 506 234 5678
          </p>
        </div>
      </div>
    </div>
     
    <p>
      v-model : +14188753893
    </p>
     
    <p>
      Pays selectionné : {}
    </p>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Disabled 1`] = `
<div
  class="m-phonefield m--is-disabled"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default m--is-disabled"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="-1"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                disabled="disabled"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Error 1`] = `
<div
  class="m-phonefield m--has-error"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-error m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-error m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                aria-invalid="true"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Error Message 1`] = `
<div
  class="m-phonefield m--has-error m--has-validation-message"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-error m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-error m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                aria-invalid="true"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <p
        aria-live="polite"
        class="m-validation-message__error"
      >
        <svg
          class="m-svg m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error message
        </span>
      </p>
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Full Width 1`] = `
<div
  class="m-phonefield"
  style="width: 100%;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Max Width 500 Px 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 500px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Max Width Large 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Other Default Country 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: fr
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +33 6 12 34 56 78
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Priority Countries Defined Fr Us Ca 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Priority Countries Empty 1`] = `
<div
  class="m-phonefield"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="0"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <p
        class="m-validation-message__helper"
      >
        Ex. :  +1 506 234 5678
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield Waiting 1`] = `
<div
  class="m-phonefield m--is-waiting"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-phonefield__wrapper"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listbox-fakeId"
      class="m-base-select m-select-virtual-scroll m-phonefield__country"
      role="combobox"
      style="width: 100%; max-width: 288px;"
      virtualscrollitemheight="52"
    >
      <div
        class="m-base-select__popup"
      >
        <div
          class="m-input-style m-select m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default m--is-readonly"
          style="width: 100%; max-width: regular;"
        >
          <div
            class="m-input-style__main"
            style="width: 100%; margin-top: 10px;"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-select-fakeId"
                id="fakeId"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Pays
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    aria-activedescendant=""
                    aria-controls="listbox-fakeId"
                    aria-haspopup="listbox"
                    aria-labelleby="fakeId"
                    class="m-phonefield__country-field"
                    role="button"
                    tabindex="-1"
                  >
                    <span
                      class="m-phonefield__hidden"
                      id="fakeId"
                    >
                      
                        Code pays: ca
                    
                    </span>
                     
                    <svg
                      aria-hidden="true"
                      class="m-phonefield__flag-wrapper"
                      height="20px"
                      width="27px"
                    >
                      <use
                        aria-hidden="true"
                      />
                    </svg>
                  </div>
                   
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <div
              class="m-input-style__append"
            >
              <!---->
               
              <div
                class="m-select__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-select__arrow-icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
            </div>
          </div>
            
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-select__validation-message"
        id="fakeId"
      >
        <!---->
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-input-style m-phonefield__number m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mPhonefield-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Numéro de téléphone
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-describedby="fakeId"
                id="mPhonefield-fakeId"
                readonly="readonly"
                type="tel"
              />
               
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
        
      <!---->
    </div>
  </div>
   
  <div
    class="m-phonefield__validation"
    id="fakeId"
  >
    <div
      class="m-validation-message m-phonefield__validation-message"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-phonefield default 1`] = `
<div>
  <!---->
  <p>
    v-model = 
  </p>
  <p>
    country selected = {"iso":"ca","prefix":"1"}
  </p>
</div>
`;
